# ICS415-Projects

./: README.md
Project1/: README.md
Project2/: Project2code.txt  README.md
Project3/Minecraft/dependencies/glad/src/: glad.c
Project3/Minecraft/src/: camera.cpp  main.cpp  player.hpp  utils.hpp
Project3/Minecraft/src/maths/: vec.hpp
Project3/Minecraft/src/render/: shader_program.hpp  texture_2d.hpp
Project3/Minecraft/src/window/: cross_platform_window.hpp  keys.hpp
Project3/Minecraft/src/world/: block.cpp  chunk.cpp  chunk.hpp  particle.hpp  world.cpp
Project3/fiver_mc_client/: CMakeLists.txt  README
Project3/fiver_mc_client/dependencies/glad/include/glad/: glad.h
Project3/fiver_mc_client/src/: camera.hpp  player.cpp
Project3/fiver_mc_client/src/maths/: mat4.hpp
Project3/fiver_mc_client/src/render/: shader_program.cpp
Project3/fiver_mc_client/src/window/: cross_platform_window.cpp
Project3/fiver_mc_client/src/world/: block.hpp  world.hpp
Project4/: README.md  bezier-editor.html  temp
